# NicProxy

./: CMakeLists.txt  README.md
NicProxy/: BAKClientSide.cpp  CMakeLists.txt  CMakeLists.txt1  CSocket.cpp  CSocket.h  CVirtualNic.cpp  CVirtualNic.h  ClientSide.cpp  ClientSide.h  NicProxy.cpp  NicProxy.h  Relay.cpp  Relay.h  ServerSide.cpp  ServerSide.h  main.cpp  mybridge.service  stdafx.h
